@@ -197,6 +197,8 @@ Standard library:
   * Pervasives.ldexp (and [@@noalloc])
   * Pervasives.compare for float, nativeint, int32, int64.
   (Bobot François)
+- GPR#329: Add exist and for_all function in Array
+  (Bernhard Schommer)
 
 Type system:
 - PR#5545: Type annotations on methods cannot control the choice of abbreviation
